--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<url>https://github.com/Mastercard/issuing-api-reference-app</url>
 	
 	<properties>
+		<sonar.organization>mastercard</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<openapitools.version>4.3.1</openapitools.version>
 		<java.version>1.8</java.version>
 		<client-encryption-version>1.7.1</client-encryption-version>
