Schedule the Sonar workflow - Every 12 hours

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
       - "**"
   pull_request:
     types: [opened, synchronize, reopened]
+  schedule:
+    - cron: "0 12 * * *"
 jobs:
   build:
     name: Build
