--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.mastercard.developers</groupId>
 	<artifactId>issuing-api-reference-app</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<packaging>jar</packaging>
 	<name>issuing-api-reference-app</name>
 	<description>Mastercard Processing APMEA Issuing Digital First APIs - Reference Application</description>
@@ -15,7 +15,7 @@
 		<java.version>1.8</java.version>
 		<client-encryption-version>1.7.1</client-encryption-version>
 		<default-package>com.mastercard.developer.issuing</default-package>
-		<ref-app-main-class>IssuingApiClientReferenceAppMain</ref-app-main-class>
+		<ref-app-main-class>com.mastercard.developer.issuing.client.main.IssuingApiClientReferenceAppMain</ref-app-main-class>
 		<okhttp-version>4.9.1</okhttp-version>
 		<gson-version>2.8.6</gson-version>
 		<gson-fire-version>1.8.5</gson-fire-version>
@@ -47,8 +47,8 @@
             **/com/mastercard/developers/encryption/rsa/*,
         </sonar.coverage.exclusions>
         <sonar.projectKey>Mastercard_issuing-api-reference-app</sonar.projectKey>
-		
 	</properties>
+
 
 	<dependencies>
 		<!-- Add Log4j2 Dependency -->
@@ -147,6 +147,7 @@
 		</dependency>
 	</dependencies>
 
+
 	<build>
 		<plugins>
 			<plugin>
@@ -179,7 +180,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>${default-package}.main.${ref-app-main-class}</mainClass>
+							<mainClass>${ref-app-main-class}</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -287,7 +288,8 @@
 									<excludes>
 										<exclude>${default-package}.generated.*</exclude>
 										<exclude>*${ref-app-main-class}</exclude>
-										<exclude>${default-package}.util.*</exclude>
+										<exclude>${default-package}.client.helper.*</exclude>
+										<exclude>${default-package}.client.main.*</exclude>
 									</excludes>
 									<limits>
 										<limit>
@@ -442,4 +444,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
