--- a/src/main/resources/sandbox/application.properties
+++ b/src/main/resources/sandbox/application.properties
@@ -34,13 +34,14 @@ mi.api.encryption.public.key.fingerprint=e235968948a44fed8c4fba33eb57e1a8343a33c
 # Scenario - Different AES key generated for request & response - Mastercard & Client both sharing their Public Key for data encryption
 # If bank has shared their Public Key with Mastercard for response encryption then bank must configure their Private key to decrypt response
 # ------------------------------------------------------------------------------------------------------------------------------------------
-# mi.api.encryption.private.key.keystore.file=sandbox/mi-sandbox-message-decryption-pkcs12-20211008131438.pfx
-# mi.api.encryption.private.key.keystore.password=<TODO:Set password>
-# mi.api.encryption.private.key.alias=sandbox-bank-private-key
+#mi.api.encryption.private.key.keystore.file=sandbox/mi-sandbox-message-decryption-pkcs12-20211008131438.pfx
+#mi.api.encryption.private.key.keystore.password=<TODO:Set password>
+#mi.api.encryption.private.key.alias=sandbox-bank-private-key
 
 # ------------------------------------------------------------------------------------------------------------------------------------------
 # Message Level PIN Encryption - Mastercard Public Key for Card PIN Encryption
 # ------------------------------------------------------------------------------------------------------------------------------------------
 mi.api.pin.encryption.tdea.public.key.file=sandbox/mi-sandbox-pin-encryption-tdea.key
-mi.api.pin.encryption.algorithm=DESede/ECB/NoPadding
+mi.api.pin.encryption.secret.key.algorithm=DESede
+mi.api.pin.encryption.secret.key.transformation=DESede/ECB/NoPadding
 
