--- a/src/main/resources/yaml_specs/authorization-management-apis.yml
+++ b/src/main/resources/yaml_specs/authorization-management-apis.yml
@@ -2,9 +2,9 @@ openapi: 3.0.3
 info:
   title: Authorization Management API
   description: >-
-    The authorization management API allows users to authenticates the client
-    and authorize client to perform various operations like Change PIN,
-    financial transaction, etc.
+    The authorization management API allows users to authenticate the client and
+    authorize client to perform various operations like 'change pin', 'financial
+    transaction', etc.
   contact:
     name: API Support
     url: 'https://developer.mastercard.com/support'
@@ -12,8 +12,7 @@ info:
   version: 2.0.0
 servers:
   - description: Sandbox server
-    url: >-
-      https://sandbox.mi.api.mastercard.com/mi-issuing-sandbox/authorization-management/
+    url: 'https://sandbox.mi.api.mastercard.com/mi-issuing-sandbox/authorization-management/'
   - description: MEA MTF/UAT server
     url: 'https://mtf.mea.api.mastercard.com/mi-issuing/authorization-management/'
   - description: SA MTF/UAT server
@@ -34,19 +33,19 @@ paths:
         **Issue Authentication Token** - Authenticate client and generate
         one-time use token for intended operation.
       description: >-
-        This API always authenticates the client based on the card ID and card
-        PIN, except for 'PIN_RESET' operation. In case of 'PIN_RESET' operation,
-        its assumed that client has forgotten card PIN and hence he is
-        authenticated based on card ID and  other parameters (date of birth,
-        CVV2/CVC2, or card expiry date).  These parameters are configured at
-        institution level in the MI Issuing customer portal.  After successful
-        authentication, the API returns a one-time authentication token
-        (randomly generated 16 bytes number). This token is used by the API
-        consumer to call the second leg of the API that requires the
-        authentication token immediately.For example, the API consumer can use
-        the authentication token issued by this API to perform the PIN change
-        operation using the update card PIN API.The generated authentication
-        token is valid only for 3 minutes (180 seconds).
+        This API always authenticates the client based on the 'card Id' and
+        'card PIN', except for 'PIN_RESET' operation. In case of 'PIN_RESET'
+        operation, it is assumed that the client has forgotten card 'PIN' and
+        hence he is authenticated based on 'card Id' and other parameters (date
+        of birth, CVV2/CVC2, or card expiry date).  These parameters are
+        configured at institution level in the MI Issuing customer portal. 
+        After successful authentication, the API returns a one-time
+        authentication token (Randomly generated 16 bytes number). This token is
+        used by the 'API consumer' to call the second leg of the API that
+        requires the authentication token immediately. For example, the 'API
+        consumer' can use the authentication token issued by this API to perform
+        the PIN change operation using the 'Update Card PIN API'. The generated
+        authentication token is valid only for 3 minutes (180 seconds).
       operationId: createToken
       x-mastercard-api-encrypted: true
       parameters:
@@ -87,11 +86,12 @@ components:
             The date and time after which the request is considered as invalid.
             If the timestamp of the institution is greater than this timestamp,
             the API request is considered as expired and is returned.<br/>The
-            dataValidUntilTimestamp parameter is converted into the institution
-            time zone before comparing it with the institution date and time. It
-            is expressed in ISO 8601 extended format. Must be either <br/>
-            YYYY-MM-DDThh:mm:ss[.sss]Z<br/> or YYYY-MM-DDThh:mm:ss[.sss] (+|-)
-            hh:mm where [.sss] is optional and can be 1 to 3 digits.
+            'dataValidUntilTimestamp' parameter is converted into the
+            institution time zone before comparing it with the institution date
+            and time. It is expressed in ISO 8601 extended format. Must be
+            either <br/> 'YYYY-MM-DDThh:mm:ss[.sss]Z'<br/> or
+            'YYYY-MM-DDThh:mm:ss[.sss] (+|-) hh:mm' where [.sss] is optional and
+            can be 1 to 3 digits.
           minLength: 20
           maxLength: 29
           example: '2020-07-04T12:09:56.450-07:00'
@@ -118,9 +118,9 @@ components:
           description: >-
             Client's date of birth.<br/>This field is applicable only while
             requesting token for 'PIN_RESET' intent. <br/> **Conditional
-            Mandatory**<font color='red'>* </font> field - Required if "Date of
-            birth" field is selected on "Card Management > Institution Parameter
-            Setup > Online PIN Set Configuration [ISS027]" screen. <br/> Format
+            Mandatory**<font color='red'>* </font> field - Required if 'Date of
+            birth' field is selected on 'Card Management > Institution Parameter
+            Setup > Online PIN Set Configuration [ISS027]' screen. <br/> Format
             - It is expressed in ISO 8601 - `YYYY-MM-DD`
           example: '1991-06-21'
     CardSecret:
@@ -131,14 +131,14 @@ components:
         cvv:
           type: string
           description: >-
-            The card verification value (CVV), card security code (CSC), card
-            verification code (CVC), or card code verification (CCV) that is
-            found on the back of a card. It provides an additional measure of a
-            card security. <br/>This field is applicable only while requesting
-            token for 'PIN_RESET' intent. <br/> **Conditional Mandatory**<font
-            color='red'>* </font> field - Required if "CVV2/CVC2" field is
-            selected on "Card Management > Institution Parameter Setup > Online
-            PIN Set Configuration [ISS027]" screen.
+            The 'card verification value (CVV)', 'card security code (CSC)',
+            'card verification code (CVC)', or 'card code verification (CCV)'
+            that is found on the back of a card. It provides an additional
+            measure of a card security. <br/>This field is applicable only while
+            requesting token for 'PIN_RESET' intent. <br/> **Conditional
+            Mandatory**<font color='red'>* </font> field - Required if
+            'CVV2/CVC2' field is selected on 'Card Management > Institution
+            Parameter Setup > Online PIN Set Configuration [ISS027]' screen.
           minLength: 3
           maxLength: 5
           pattern: '[0-9]+'
@@ -150,8 +150,8 @@ components:
             `MM/YY`. This is not applicable for LVC. <br/>This field is
             applicable only while requesting token for 'PIN_RESET' intent. <br/>
             **Conditional Mandatory**<font color='red'>* </font> field -
-            Required if "Expiry date" field is selected on "Card Management >
-            Institution Parameter Setup > Online PIN Set Configuration [ISS027]"
+            Required if 'expiry date' field is selected on 'Card Management >
+            Institution Parameter Setup > Online PIN Set Configuration [ISS027]'
             screen.
           pattern: '(0[1-9]|1[0-2])/[0-9]{2}'
           example: 11/30
@@ -199,9 +199,9 @@ components:
       type: string
       description: >-
         One-time token to authorize a user for a single transaction that is of a
-        specific intent such as PURCHASE transaction. This token is
+        specific intent such as 'PURCHASE' transaction. This token is
         automatically generated and is valid until the date and time mentioned
-        under tokenValidUntilTimesStamp.
+        under 'tokenValidUntilTimesStamp'.
       minLength: 32
       maxLength: 36
       pattern: '[a-zA-Z0-9_-]+'
@@ -213,7 +213,7 @@ components:
         The date and time after which the token is considered as invalid. If
         this timestamp is less than the current timestamp of institution, the
         current token is treated as an invalid token. <br/>It is expressed in
-        ISO 8601 extended format: YYYY-MM-DDThh:mm:ss[.sss] (+|-) hh:mm where
+        ISO 8601 extended format: 'YYYY-MM-DDThh:mm:ss[.sss] (+|-) hh:mm' where
         [.sss] is optional and can be 1 to 3 digits.
       minLength: 20
       maxLength: 29
@@ -225,9 +225,9 @@ components:
         encryptedBlock:
           type: string
           description: >-
-            It is the PIN block in encrypted format. Both encryptedBlock and
-            encryptedKey are mutually inclusive. <br/> **Supported formats:** 
-
+            It is the PIN block in encrypted format. Both 'encrypted block' and
+            'encrypted key' are mutually inclusive. <br/> **Supported formats:
+            **  
 
             * `ISO 9564-1 Format 0` - PIN Block generated with ISO 9564-1
             **Format-0**. The generated PIN Block is encrypted using **3-DES**
@@ -243,10 +243,10 @@ components:
         encryptedKey:
           type: string
           description: >-
-            One-time use 3-DES or AES session key encrypted using payShield HSM
-            RSA public key. <br/> **Conditional Mandatory**<font color='red'>*
-            </font> field - Required if encryptedPinBlock field is present in
-            the request.
+            One-time use 3-DES or AES session key encrypted using 'pay shield'
+            HSM RSA public key. <br/> **Conditional Mandatory**<font
+            color='red'>* </font> field - Required if 'encrypted pin block'
+            field is present in the request.
           minLength: 32
           maxLength: 512
           pattern: '[a-zA-Z0-9]+'
@@ -258,14 +258,14 @@ components:
       type: string
       description: >-
         Cryptographic encryption algorithm that is used to generate the
-        encryption key and encrypt the PIN block. Currently only 3-DES
+        encryption key and encrypt the 'PIN' block. Currently only '3-DES'
         encryption algorithm is supported. If value is not provided in the
-        input, then default 3-DES algorithm is considered. <br/> **Valid
-        values:**  
+        input, then default '3-DES' algorithm is considered. <br/> **Valid
+        values: **  
 
-        * `3DES` - 3-DES encryption(default value)  
+        * `3DES` - 3-DES encryption (default value)  
 
-        * `AES` - AES encryption(Not supported, reserved for future use)
+        * `AES` - AES encryption (Not supported, reserved for future use)
       example: 3DES
     ErrorMessage:
       required:
@@ -291,7 +291,7 @@ components:
           example: MISSING_REQUIRED_FIELD
         Description:
           type: string
-          description: Human-readable short description of the reasonCode.
+          description: Human-readable short description of the reason code.
           minLength: 10
           maxLength: 250
           example: Missing Required Field '<Field-Name>'
@@ -353,15 +353,16 @@ components:
       name: X-MC-Correlation-ID
       in: header
       description: >-
-        Correlation ID, also known as Transit ID or Request ID, is a unique
-        identifier value attached to a particular transaction or event chain.The
-        Correlation ID also helps in auditing, debugging, and tracing the
+        'Correlation ID', also known as 'Transit ID' or 'Request ID', is unique
+        identifier value attached to a particular transaction or event chain.
+        The 'Correlation ID' also helps in auditing, debugging, and tracing the
         request execution flow. <BR/> It is recommended to generate universally
-        unique identifier (UUID) in compliance with RFC 4122.<BR/> If the
-        Correlation ID is not received in the incoming request, the Mastercard
-        Processing platform generates a universally unique identifier (UUID)
-        dynamically and assigns it to the request. The Correlation ID is always
-        added to the response header to provide end to end traceability.  
+        unique identifier (UUID) in compliance with 'RFC 4122'.<BR/> If the
+        'Correlation ID' is not received in the incoming request, the
+        'Mastercard Processing' platform generates a universally unique
+        identifier (UUID) dynamically and assigns it to the request. The
+        Correlation ID is always added to the response header to provide end to
+        end traceability.  
 
         * minLength: 6  
 
@@ -378,8 +379,8 @@ components:
       name: X-MC-Bank-Code
       in: header
       description: >-
-        It is a 6 digit bank/institution identifier code. <br/> **Conditional
-        Mandatory**<font color='red'>* </font> field - Required to be passed  by
+        It is a 6-digit bank/institution identifier code. <br/> **Conditional
+        Mandatory**<font color='red'>* </font> field - Required to be passed by
         third party vendors or service provider (like 3-D Secure authenticator)
         who has access to the data of multiple banks, supported by legal
         agreement and access grants.  
@@ -401,8 +402,8 @@ components:
       description: >-
         Value identifying the origin or source of a transaction. The list of
         possible sample values are available in the database and shared in the
-        API_SOURCE_VALUES list under "Card Management > Institution Parameter
-        Setup > System Codes [ISSS15]". This field is used only for logging
+        'API_SOURCE_VALUES' list under 'Card Management > Institution Parameter
+        Setup > System Codes [ISSS15]'. This field is used only for logging
         purpose.<br/> 
 
 
@@ -410,7 +411,7 @@ components:
 
         * maxLength: 3  
 
-        * pattern: [A-Z0-9]+ <br/> <br/> **Few sample values:** <br/>  
+        * pattern: [A-Z0-9]+ <br/> <br/> **Few sample values: ** <br/>  
 
         * `IVR` - Interactive Voice Response  
 
@@ -449,7 +450,7 @@ components:
         through, the client retries with the same idempotency key value, and the
         server uses it to look up the state of request and continue from where
         it left off. Recommended to generate universally unique identifier
-        (UUID) compliant with `RFC 4122`.
+        (UUID) compliant with 'RFC 4122'.
       schema:
         type: string
         pattern: '^[a-zA-Z0-9_-]{6,36}$'
